@@ -23,7 +23,7 @@ with pyscard; if not, write to the Free Software Foundation, Inc., 51
 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 
 -------------------------------------------------------------------------------
-Last update : pyscard 1.6.2 (June 1, 2007)
+Last update : pyscard 1.6.2 (June 28, 2007)
 -------------------------------------------------------------------------------
 
 pyscard is a python module adding smart cards support to python.
